Couple toy pages

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,9 +1,8 @@
 {{ template "header.html" . }}
 
-<h1>Home</h1>
-
+<h1>Admin Dashboard</h1>
 <div>
-  <a href="/admin">Admin Dashboard</a>
+  <a href="/admin/upload">Upload Images</a>
 </div>
 
 {{ template "footer.html" . }}
