--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 {{ template "header.html" . }}
 
-<form action="/upload" method="post" enctype="multipart/form-data">
+<form action="/admin/upload" method="post" enctype="multipart/form-data">
   <input type="file" name="upload" multiple /><br /><br />
   <input type="submit" value="Submit" />
 </form>
