--- a/templates/header.html
+++ b/templates/header.html
@@ -4,5 +4,7 @@
     <meta charset="utf-8" />
     <title>{{ .title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
   </head>
   <body>
