--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,8 @@
     <title>{{ .title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link href="https://releases.transloadit.com/uppy/v2.3.1/uppy.min.css" rel="stylesheet">
+    
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
   </head>
   <body>
