Added basic photo stream home page

--- a/templates/header.html
+++ b/templates/header.html
@@ -5,8 +5,23 @@
     <title>{{ .title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://releases.transloadit.com/uppy/v2.3.1/uppy.min.css" rel="stylesheet">
-    
+    <link
+      href="https://releases.transloadit.com/uppy/v2.3.1/uppy.min.css"
+      rel="stylesheet"
+    />
+
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+
+    <style type="text/css">
+      body {
+        background-color: #111;
+        color: #eee;
+      }
+
+      a {
+        color: rgb(87, 123, 240);
+      }
+    </style>
   </head>
-  <body>
+  <body></body>
+</html>
