--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {{ template "header.html" . }}
 
-<h1>Home</h1>
+{{ template "stream.html" .files }}
 
 <div>
   <a href="/admin">Admin Dashboard</a>
