--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,6 +3,7 @@
 <h1>Admin Dashboard</h1>
 <div>
   <a href="/admin/upload">Upload Images</a>
+  <a href="/admin/import">Import Uploaded Images</a>
 </div>
 
 {{ template "footer.html" . }}
