Changed file_id -> image_id

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -20,7 +20,7 @@
 
 <div class="streamContainer">
   {{ range . }}
-  <a href="/image/{{ .FileId }}" class="streamLink">
+  <a href="/image/{{ .ImageId }}" class="streamLink">
     <img class="streamImage" src="{{ .PublicURL }}" />
   </a>
   {{ end }}
