--- a/templates/header.html
+++ b/templates/header.html
@@ -23,5 +23,8 @@
       }
     </style>
   </head>
-  <body></body>
-</html>
+  <body>
+    <div>
+      <a href="/">Home</a>
+      <a href="/albums">Albums</a>
+    </div>
