Added stub for edit album

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,9 +1,14 @@
 {{ template "header.html" . }}
 
 <h1>Admin Dashboard</h1>
+
 <div>
   <a href="/admin/upload">Upload Images</a>
   <a href="/admin/import">Import Uploaded Images</a>
+</div>
+
+<div>
+  <a href="/admin/albums">Albums</a>
 </div>
 
 {{ template "footer.html" . }}
