--- a/templates/album_list.html
+++ b/templates/album_list.html
@@ -1,6 +1,6 @@
 <style>
   .streamLink {
-    margin: 0px;
+    margin: 10px;
     line-height: 0px;
     display: flex;
     flex-direction: column;
@@ -10,6 +10,7 @@
   .streamImage {
     margin: 0px;
     max-width: 400px;
+    max-height: 400px;
   }
   .streamContainer {
     display: flex;
