Add deleting from albums

--- a/templates/admin_albums.html
+++ b/templates/admin_albums.html
@@ -4,7 +4,7 @@
 
 {{ range .albums }}
 <div>
-    <div>{{ .Name }} <a href="/admin/albums/edit/{{ .Slug }}">Edit</a></div>
+    <div>{{ .Name }} <a href="/admin/albums/{{ .Slug }}">Edit</a></div>
 </div>
 {{ end }}
 
