Add/delete albums

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,6 +9,10 @@
 
 <div>
   <a href="/admin/albums">Albums</a>
+
+  <form method="post" action="/admin/albums">
+    <button type="submit">Add new album</button>
+  </form>
 </div>
 
 {{ template "footer.html" . }}
