--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,9 @@
-    <footer style="margin-top: 20px;">
-        <a href="/admin">Admin</a>
-    </footer>
+
+        <footer class="footer">
+            <a href="/admin">Admin</a>
+        </footer>
+
+    </div> <!-- End of container div -->
   </body>
   </html>
   
