--- a/templates/album_list.html
+++ b/templates/album_list.html
@@ -1,33 +1,61 @@
 <style>
-  .streamLink {
-    margin: 10px;
-    line-height: 0px;
+  .albumContainer {
+    margin: 5px;
+    padding: 12px;
+
+    width: 300px;
+    height: 300px;
+
+    background-color: rgb(233, 233, 233);
+    transition: background-color 0.1s ease-in-out;
+
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .streamImage {
-    margin: 0px;
-    max-width: 400px;
-    max-height: 400px;
-  }
-  .streamContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+    align-items: stretch;
 
-    margin-left: auto;
-    margin-right: auto;
+    color: #222;
+    font-weight: 600;
+    text-align: center;
+
+    border-radius: 15px;
+  }
+
+  .albumContainer:hover {
+    background-color: rgb(223, 223, 223);
+    transition: background-color 0.1s ease-in-out;
+  }
+
+  .streamLink {
+    display: contents;
+    flex: 1;
+    width: 100%;
+  }
+
+  .streamImage {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  .albumsGrid {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .albumTitle {
+    font-size: 18px;
   }
 </style>
 
-<div class="streamContainer">
+<div class="albumsGrid">
   {{ range . }}
+
   <a href="/album/{{ .Slug }}" class="streamLink">
-    <img class="streamImage" src="{{ .PublicURL }}" />
-    <div>{{ .Name }}</div>
+    <div class="albumContainer">
+      <img class="streamImage" src="{{ .PublicURL }}" />
+      <div class="albumTitle">{{ .Name }}</div>
+    </div>
   </a>
+
   {{ end }}
 </div>
