--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <title>{{ .title }}</title>
+    <title>{{ . }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
@@ -10,21 +10,24 @@
       rel="stylesheet"
     />
 
+    <link
+      href="/static/style.css"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+        
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
-
-    <style type="text/css">
-      body {
-        background-color: #111;
-        color: #eee;
-      }
-
-      a {
-        color: rgb(87, 123, 240);
-      }
-    </style>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   </head>
+
   <body>
-    <div>
-      <a href="/">Home</a>
-      <a href="/albums">Albums</a>
-    </div>
+    <div class="container">
+      <div class="headerMenu">
+        <a href="/">Latest</a>
+        <a href="/albums">Albums</a>
+      </div>
+    
