--- a/templates/album_list.html
+++ b/templates/album_list.html
@@ -6,14 +6,14 @@
     width: 300px;
     height: 300px;
 
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(48, 48, 48);
     transition: background-color 0.1s ease-in-out;
 
     display: flex;
     flex-direction: column;
     align-items: stretch;
 
-    color: #222;
+    color: rgb(205, 205, 205);
     font-weight: 600;
     text-align: center;
 
@@ -21,8 +21,15 @@
   }
 
   .albumContainer:hover {
-    background-color: rgb(223, 223, 223);
-    transition: background-color 0.1s ease-in-out;
+    transition: box-shadow 0.1s, color 0.1s, ease-in-out,
+      background-color 0.1s ease-in-out;
+
+    background-color: rgb(60, 60, 60);
+    color: #fff;
+
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   }
 
   .streamLink {
