--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,46 @@
 {{ template "header.html" "Login" }}
 
-{{ if .error }}
-  <div class="error">
+<form action="/login" method="post" class="loginForm">
+  <h3>Sign in</h3>
+
+  {{ if .error }}
+  <div class="error neighbored-bottom">
     {{ .error }}
   </div> 
-{{ end }}
+  {{ end }}
+  
+  <label for="username">Username</label>
+  <input type="text" name="username" autofocus />
 
-<form action="/login" method="post">
-  <input type="text" name="username" />
+  <label for="password">Password</label>
   <input type="password" name="password" />
 
-  <button type="submit">Login</button>
+  <button type="submit" class="button">Login</button>
 </form>
+
+<style>
+  .loginForm {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 250px;
+  }
+
+  .loginForm > input {
+    margin-bottom: 1em;
+    font-size: 24px;
+    background-color: #111;
+    color: #fff;
+    border: none;
+    padding: 10px 12px;
+    border-radius: 5px;
+  }
+
+  .loginForm > label {
+    color: #ccc;
+    margin-bottom: 5px;
+  }
+</style>
 
 {{ template "footer.html" . }}
