--- a/templates/admin_albums.html
+++ b/templates/admin_albums.html
@@ -1,11 +1,34 @@
 {{ template "header.html" "Your Albums" }}
 
-<h2>Albums</h2>
+<div class="adminAlbumList">
+  <h2>Albums</h2>
 
-{{ range .albums }}
-<div>
-    <div>{{ .Name }} <a href="/admin/albums/{{ .Slug }}">Edit</a></div>
+  {{ range .albums }}
+  <div class="adminAlbum">
+    {{ .Name }} <a class="button" href="/admin/albums/{{ .Slug }}">Edit</a>
+  </div>
+  {{ end }}
 </div>
-{{ end }}
+
+<style>
+  .adminAlbumList {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+
+    display: flex;
+    flex-direction: column;
+  }
+  .adminAlbum {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em;
+    border-radius: 5px;
+  }
+  .adminAlbum:hover {
+    background-color: #121212;
+  }
+</style>
 
 {{ template "footer.html" . }}
