--- a/templates/image.html
+++ b/templates/image.html
@@ -24,4 +24,24 @@
   />
 </div>
 
-{{ template "footer.html" . }}
+{{ if .isAdmin }}
+<form
+  id="deleteImageForm"
+  class="hiddenForm neighbored-top"
+  method="post"
+  action="/admin/images/{{ .smallestFile.ImageId }}/delete"
+></form>
+
+<button class="button negative" onclick="onDeleteClick()">Delete Image</button>
+
+<script>
+  function onDeleteClick(e) {
+    const confirmed = confirm("Are you sure you want to delete this image?");
+
+    if (confirmed) {
+      const form = document.getElementById("deleteImageForm");
+      form.submit();
+    }
+  }
+</script>
+{{ end }} {{ template "footer.html" . }}
