Update latest photos query

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -50,7 +50,7 @@
     gutter: 5,
   });
 
-  imagesLoaded(grid).on("progress", function () {
+  imagesLoaded(grid).on("done", function () {
     msnry.layout();
   });
 </script>
