Fix latest photo file selection and masonry loading

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -46,12 +46,9 @@
   <div class="grid-sizer"></div>
 
   {{ range . }}
-  <div class="grid-item">
+  <div class="grid-item" style="aspect-ratio: {{ .Width }} / {{ .Height }};">
     <a href="/image/{{ .ImageId }}" class="streamLink">
-      <img
-        src="{{ .PublicURL }}"
-        style="aspect-ratio: {{ .Width }} / {{ .Height }};"
-      />
+      <img src="{{ .PublicURL }}" />
     </a>
   </div>
   {{ end }}
