Some mobile UI polish and bug fixes

--- a/templates/album_list.html
+++ b/templates/album_list.html
@@ -33,15 +33,14 @@
   }
 
   .streamLink {
-    display: contents;
     flex: 1;
     width: 100%;
   }
 
   .streamImage {
-    width: 100%;
-    height: 100%;
+    flex: 1;
     object-fit: contain;
+    width: 100%;
   }
 
   .albumsGrid {
