--- a/templates/albums.html
+++ b/templates/albums.html
@@ -1,5 +1,5 @@
 {{ template "header.html" "Albums" }}
 
-{{ template "album_list.html" .files }}
+{{ template "album_list.html" .albums }}
 
 {{ template "footer.html" . }}
