--- a/static/style.css
+++ b/static/style.css
@@ -44,6 +44,7 @@ a:hover {
 
 .footer {
   margin-top: 24px;
+  margin-bottom: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
