Adding blueimp gallery to image stream view

--- a/templates/album.html
+++ b/templates/album.html
@@ -9,6 +9,6 @@
 <h1>{{ .album.Name }}</h1>
 <div class="albumDescription">{{ .album.Description }}</div>
 
-{{ template "stream.html" .files }} 
+{{ template "stream.html" .images }} 
 
 {{ template "footer.html" . }}
