--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {{ template "header.html" "All Photos" }}
 
-{{ template "stream.html" .files }}
+{{ template "stream.html" .images }}
 
 {{ template "footer.html" . }}
