--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,7 @@
       href="/static/style.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/static/css/blueimp-gallery.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +23,7 @@
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <!-- <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script> -->
+    
   </head>
 
   <body>
